feat: tanukui integration

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "simple-icons": "^9.21.0"
+    "simple-icons": "^9.21.0",
+    "tanukui": "^0.0.16"
   },
   "devDependencies": {
     "@types/node": "^20",
